@@ -19,6 +19,7 @@ Version 1.1.4 to be released
 - Bug #1488: When using cookies with CJuiWidget jquery.cookie.js is not registered (sebas)
 - Bug #1493: ShellCommand wouldn't process logs after exiting. (Qiang)
 - Bug #1521: CUniqueValidator may incorrectly fail the validation of a non-PK column when updating both this column and the PK column (Qiang)
+- Enh #954: Refactored CActiveRecord and CActiveFinder so that CActiveRecord::with() always returns the AR object itself (Qiang)
 - Enh #1073: Allow dependencies to be set in constructor of CChainedCacheDependency. Also allow dependencies to be specified as configurations. (Qiang)
 - Enh #1347: Added CPagination::validateCurrentPage (Qiang)
 - Enh #1358: Enhanced the 'together' option of HAS_MANY/MANY_MANY relations so that setting it true will ensure the related table is joined with the primary table in a single SQL (Qiang)
